--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,48 @@
+version: '3'
 
+services:
+
+  db:
+    image: mysql
+    container_name: nextcloud-mysql
+    networks:
+      - nextcloud_network
+    volumes:
+      - db:/var/lib/mysql
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      - MYSQL_ROOT_PASSWORD=secret
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=nextcloud
+      - MYSQL_PASSWORD=mysql
+    restart: unless-stopped
+
+  app:
+    image: nextcloud:latest
+    container_name: nextcloud-app
+    networks:
+      - nextcloud_network
+    ports:
+      - 1337:80
+    depends_on:
+      - db
+    volumes:
+      - nextcloud:/var/www/html
+      - ./app/config:/var/www/html/config
+      - ./app/custom_apps:/var/www/html/custom_apps
+      - ./app/data:/var/www/html/data
+      - ./app/themes:/var/www/html/themes
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=nextcloud
+      - MYSQL_PASSWORD=mysql
+      - MYSQL_HOST=172.19.0.2:3306
+    restart: unless-stopped
+
+volumes:
+  nextcloud:
+  db:
+
+networks:
+  nextcloud_network:
